--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,4 +1,4 @@
-<h5>or create an account with us!</h5>
+<h5>New to wondererwanderer? Sign up with us now!</h5>
 
 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
