--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -3,3 +3,13 @@ span  {
   font-size: 1rem;
   font-style: italic;
 }
+
+h5  {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+a {
+  margin-top: 5px;
+  font-size: 1rem;
+}
