--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-{{ isLoggedIn }}
 
 <!-- home page when user is not logged in - show sign up/log in page -->
 <!-- <div *ngIf="!isLoggedIn">
@@ -10,5 +9,5 @@
 <!-- home page when user is logged in -->
 <div>
   <ww-navigation></ww-navigation>
-  <ww-user></ww-user>
+  <ww-posts></ww-posts>
 </div>
