settled itinerary summary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<div *ngIf="userExist">
+  <ww-navigation></ww-navigation>
+
+  <ww-side-navigation></ww-side-navigation>
+</div>
+
 <router-outlet></router-outlet>
