--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,8 @@
 <div class="auth col-md-4 col-md-offset-7">
   <div class="social-login">
     <h5>Sign in via your social account</h5>
-    <!-- <a href="http://localhost:9000/auth/login/facebook"><img src="../../assets/facebook_login.png" alt="facebook log in"></a> -->
-    <img src="../../assets/facebook_login.png" alt="facebook log in" (click)="loginFacebook()">
+    <a href="http://localhost:9000/auth/login/facebook"><img src="../../assets/facebook_login.png" alt="facebook log in"></a>
+    <!-- <img src="../../assets/facebook_login.png" alt="facebook log in" (click)="loginFacebook()"> -->
     <img src="../../assets/btn_google_signin_light_normal_web.png" alt="google log in">
   </div>
 
