--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,5 @@
 
 <!-- home page when user is logged in -->
 <div>
-  <ww-navigation></ww-navigation>
-  <ww-posts></ww-posts>
+  <ww-posts class="col-md-6 col-md-offset-1"></ww-posts>
 </div>
