--- a/src/app/post/post/post.component.html
+++ b/src/app/post/post/post.component.html
@@ -1,21 +1,24 @@
 <div class="userPosts">
+
+  <div class="update">
+    <a (click)="onEdit()"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+    <a (click)="onDelete()"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+  </div>
+
   <div class="userDetail">
     <div class="img"></div>
     <div class="nameNTime">
-      <h5>{{ post.user}}</h5>
+      <h5>{{ post.user.username}}</h5>
       <h6>{{ post.created_at | date:'medium'}}</h6>
     </div>
   </div>
 
-  <div [class.editing]="editing">
-    <p>{{ post.content }}</p>
-  </div>
+  <div class="content">
+    <div [class.editing]="editing">
+      <p>{{ post.content }}</p>
+    </div>
 
-  <input type="text" *ngIf="editing" [value]="post.content" class="edit" (keyup.enter)="updatePost(post, editedPost.value)" (blur)="updatePost(post, editedPost.value)" #editedPost>
-
-  <div class="update">
-    <a (click)="onEdit()">Edit</a>
-    <a (click)="onDelete()">Delete</a>
+    <input type="text" *ngIf="editing" [value]="post.content" class="edit" (keyup.enter)="updatePost(post, editedPost.value)" (blur)="updatePost(post, editedPost.value)" #editedPost autofocus>
   </div>
 
   <hr>
