--- a/src/app/post/post/post.component.scss
+++ b/src/app/post/post/post.component.scss
@@ -37,7 +37,16 @@ h6  {
 }
 
 input {
-  padding-left: 5px;  
+  padding-left: 5px;
   width: 100%;
   border-radius: 5px;
+}
+
+.content  {
+  margin-top: 10px;
+  padding-left: 5px;
+}
+
+hr  {
+  margin-top: 5px;
 }
