--- a/src/app/post/post-input/post-input.component.html
+++ b/src/app/post/post-input/post-input.component.html
@@ -1,5 +1,5 @@
 
-<div class="col-md-6 col-md-offset-3">
+<div>
   <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
 
     <div class="form-group inline">
